# opencv.meanshift

./: .gitignore  CMakeLists.txt  Makefile
src/: Makefile
src/demo/: CMakeLists.txt
src/lib/: CMakeLists.txt
